--- a/src/app/core/pages/home-page/home-page.component.html
+++ b/src/app/core/pages/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<div class="posts">
+  <app-post-title></app-post-title>
+  <app-post-title></app-post-title>
+  <app-post-title></app-post-title>
+  <app-post-title></app-post-title>
+</div>
