--- a/src/app/shared/components/post-title/post-title.component.html
+++ b/src/app/shared/components/post-title/post-title.component.html
@@ -11,6 +11,7 @@
 
   <button
     [routerLink]="['/post', 12312]"
-    class="btn btn-dark"
-  >Открыть</button>
+    class="btn btn-dark">
+    Open
+  </button>
 </div>
