--- a/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
@@ -5,13 +5,13 @@
 
   <ul>
     <li routerLinkActive="active">
-      <a [routerLink]="['/admin', 'dashboard']">Главная</a>
+      <a [routerLink]="['/admin', 'dashboard']">Main</a>
     </li>
     <li routerLinkActive="active">
-      <a [routerLink]="['/admin', 'create']">Создать</a>
+      <a [routerLink]="['/admin', 'create']">Create</a>
     </li>
     <li>
-      <a href="#" (click)="logout($event)">Выйти</a>
+      <a href="#" (click)="logout($event)">Exit</a>
     </li>
   </ul>
 </nav>
