ADD authentication by email and password UPDATE 2020.06.24

--- a/src/app/admin/core/pages/login-page/login-page.component.html
+++ b/src/app/admin/core/pages/login-page/login-page.component.html
@@ -33,7 +33,8 @@
       <small *ngIf="form.get('password').errors.required">type the password</small>
       <small *ngIf="form.get('password').errors.minlength">password must contain at least
         {{form.get('password').errors.minlength.requiredLength}} letter. Now it contain
-        {{form.get('password').errors.minlength.actualLength}} letters.</small>
+        {{form.get('password').errors.minlength.actualLength}} letters.
+      </small>
     </div>
   </div>
 
