--- a/src/app/admin/core/pages/login-page/login-page.component.html
+++ b/src/app/admin/core/pages/login-page/login-page.component.html
@@ -40,7 +40,7 @@
 
   <button class="btn btn-primary"
           type="submit"
-          [disabled]="form.invalid">
+          [disabled]="form.invalid || submitted">
     Login
   </button>
 
