--- a/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/">Angular Admin</a>
   </h1>
 
-  <ul>
+  <ul  *ngIf="isAuthenticated()">
     <li routerLinkActive="active">
       <a [routerLink]="['/admin', 'dashboard']">Main</a>
     </li>
