--- a/src/app/admin/core/pages/login-page/login-page.component.html
+++ b/src/app/admin/core/pages/login-page/login-page.component.html
@@ -6,6 +6,10 @@
     {{errorMessage}}
   </div>
 
+  <div class="alert alert-info" *ngIf="message">
+    {{message}}
+  </div>
+
   <div class="form-control"
        [ngClass]="{
        invalid: form.get('email').touched && form.get('email').invalid}">
