--- a/src/app/core/pages/home-page/home-page.component.html
+++ b/src/app/core/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="posts">
-  <app-post-title></app-post-title>
-  <app-post-title></app-post-title>
-  <app-post-title></app-post-title>
-  <app-post-title></app-post-title>
+  <app-post></app-post>
+  <app-post></app-post>
+  <app-post></app-post>
+  <app-post></app-post>
 </div>
