--- a/src/app/admin/core/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/core/pages/dashboard-page/dashboard-page.component.html
@@ -18,8 +18,7 @@
     </thead>
 
     <tbody>
-    <tr *ngFor="let post of posts; let i = index">
-    <!--<tr *ngFor="let post of posts | postFilter: filter.value; let i = index">-->
+    <tr *ngFor="let post of posts | postFilter: filter.value; let i = index">
 
       <td>{{ i + 1 }}</td>
       <td>{{ post.author }}</td>
