--- a/src/app/admin/core/pages/edit-page/edit-page.component.html
+++ b/src/app/admin/core/pages/edit-page/edit-page.component.html
@@ -1,1 +1,31 @@
-<p>edit-page works!</p>
+<div *ngIf="form; else loading">
+
+  <form [formGroup]="form" (ngSubmit)="submit()">
+
+    <div class="form-control"
+      [ngClass]="{invalid: form.get('title').touched && form.get('title').invalid}">
+
+      <label for="title">Post name:</label>
+      <input id="title" type="text" formControlName="title">
+
+      <div *ngIf="form.get('title').touched && form.get('title').invalid"
+        class="validation">
+        <small *ngIf="form.get('title').errors.required">
+          Type post name
+        </small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <quill-editor formControlName="content"></quill-editor>
+    </div>
+
+    <button class="btn btn-primary"
+      type="submit"
+      [disabled]="form.invalid || submitted">Save</button>
+  </form>
+</div>
+
+<ng-template #loading>
+  <p class="text-center">Loading...</p>
+</ng-template>
