ADD alert component, alert service UPDATE 2020.06.26

--- a/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/admin/core/layouts/admin-layout/admin-layout.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar bg-primary">
+
+  <app-alert></app-alert>
+
   <h1>
-    <a routerLink="/">Angular Admin</a>
+    <a routerLink="/">Bonsai Blog</a>
   </h1>
 
   <ul  *ngIf="isAuthenticated()">
