--- a/src/app/admin/core/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/core/pages/dashboard-page/dashboard-page.component.html
@@ -23,7 +23,7 @@
       <td>{{ i + 1 }}</td>
       <td>{{ post.author }}</td>
       <td>{{ post.title }}</td>
-      <td>{{ post.date | date:'medium' }}</td>
+      <td>{{ post.date | date:'medium':null }}</td>
 
       <td>
         <button
