--- a/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/app/core/layouts/main-layout/main-layout.component.html
@@ -1,6 +1,10 @@
 <nav class="navbar main">
   <h1>Bonsai Blog</h1>
+
 </nav>
+<div class="adminRoute">
+  <a routerLink="/admin">Log in</a>
+</div>
 
 <div class="container">
   <router-outlet></router-outlet>
